# kappa

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md
data/: datasets_constants.h
data/twitter/: higgs-social_network-shuffled.edgelist  higgs-social_network.edgelist
src/: CMakeLists.txt  init.cpp
src/applications/: CMakeLists.txt  main.cpp  no_op.h  pagerank.cpp  pagerank.h
src/applications/dynamic/: pagerank.cpp  pagerank.h  sssp.cpp  sssp.h  wcc.cpp  wcc.h
src/applications/static/: bfs.cpp  bfs.h  connected_components.cpp  connected_components.h  dfs.cpp  dfs.h  no_op.cpp  no_op.h  pagerank.cpp  pagerank.h  sssp.cpp  sssp.h
src/core/: build_graph_static.cpp  build_graph_static.h  compute.cpp  compute.h  connected_components.cpp  connected_components.h  datatypes.cpp  datatypes.h  deletions.cpp  deletions.h  digraph.cpp  digraph.h  global_scheduler.cpp  global_scheduler.h  global_thread_pool.cpp  global_thread_pool.h  global_worker_pool.h  graph.cpp  graph.h  insertions.cpp  insertions.h  mpmc_queue.h  mpmp_queue.h  scheduler.cpp  scheduler.h  snapshot.cpp  snapshot.h  task.cpp  task.h  task.hpp  task_pool.cpp  task_pool.h  task_queue.h  task_queue.hpp  task_temp.cpp  task_temp.h  thread_pool.cpp  thread_pool.h  thread_pool.hpp  thread_safe_queue.cpp  (+7 more)
src/core/runtimes/: runtime_hard_barrier.cpp  runtime_hard_barrier.h
src/core/utils/: threading.cpp  threading.h
src/experiments/: naive_incremental_compute_edgelist.cpp  naive_incremental_compute_edgelist.h  naive_incremental_compute_tsv.cpp  naive_incremental_compute_tsv.h
src/experiments/run/: dataset_split_hardcoded.h
src/experiments/update_propagation/: compute_propagation.cpp  compute_propagation.h  pagerank_propagation.cpp  pagerank_propagation.h
src/experiments/utils/: dataset_split.cpp  dataset_split.h  dump_vertex_states.cpp  dump_vertex_states.h
src/ingestion/: naive_update_from_tsv.cpp  naive_update_from_tsv.h
src/preprocessor/: build_graph_static.cpp  edge_array_to_graph.cpp  edge_array_to_graph.h  preload_states.cpp  preload_states.h  read_tsv_disk.cpp  read_tsv_disk.h  tsv_to_edge_array.cpp  tsv_to_edge_array.h  tsv_to_graph.cpp  tsv_to_graph.h
src/preprocessor/read_from_disk/: edgelist_to_edge_array.cpp  edgelist_to_edge_array.h  edgelist_to_graph.cpp  edgelist_to_graph.h  edgelist_to_update_array.h  (+5 more)
test/: tests_main.cpp
utils/: automate-queue-plotting.sh  gnuplot_tasks-time.gp
utils/nx-validate/: checker.py  pagerank.py  sssp.py
utils/scaling/: automate.sh  automate_scaling_cores.sh
utils/vary_batch_sizes/: automate_vary_batch_sizes.sh
(+29 files in other folders)
